Fixed issue with linespacing between Ps

--- a/css/site.css
+++ b/css/site.css
@@ -33,8 +33,8 @@ line-height: 14px;
     max-width: 300px;
 }
 
-p {
-    line-height: 200%;
+blockquote p {
+    margin-top: 2em;
 }
 
 #contactModal{
